--- a/src/app/products/components/rate-product/rate-product.component.html
+++ b/src/app/products/components/rate-product/rate-product.component.html
@@ -1,1 +1,66 @@
-<p>rate-product works!</p>
+<div class="row justify-content-center">
+    <div class="col-md-6">
+        <div class="card shadow my-5">
+            <form #productRateForm="ngForm"  (ngSubmit)="saveRatingProduct()">
+                <h4 class="card-header">Evaluer l'article</h4>
+                <div class="card-body">
+                    <div class="mb-3">
+                        <b><label for="name" class="form-label">Nom de l'article :</label></b>
+                        <input
+                        [(ngModel)]="product.name"
+                        type="text"
+                        id="name"
+                        class="form-control"
+                        name="name"
+                        />
+                    </div>
+                    <div class="mb-3">
+                        <b><label for="description" class="form-label">Qu'avez-vous pensez de l'article ?</label></b>
+                        <textarea
+                        [(ngModel)]="comment"
+                        type="textArea"
+                        id="description"
+                        class="form-control"
+                        name="description"
+                        ></textarea>
+                    </div>
+                    <div class="mb-3">
+                        <b><label for="rating" class="form-label">Combien d'étoiles donneriez-vous à cet article ? </label></b>
+                        <select
+                            [(ngModel)]="rating"
+                            id="rating"
+                            class="form-control"
+                            name="rating"
+                            required
+                        >
+                             <option value="1">
+                                1 étoile
+                            </option>
+                            <option value="2">
+                                2 étoiles
+                            </option>
+                            <option value="3">
+                                3 étoiles
+                            </option>
+                            <option value="4">
+                                4 étoiles
+                            </option>
+                            <option value="5">
+                                5 étoiles
+                            </option>
+                        </select>
+                    </div>
+                </div>
+                
+                <div class="card-footer d-flex justify-content-between">
+                    <button 
+                        type="submit" 
+                        class="btn btn-primary"
+                    >
+                        Enregistrer
+                    </button>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
