--- a/src/app/invoices/components/table-invoices/table-invoices.component.html
+++ b/src/app/invoices/components/table-invoices/table-invoices.component.html
@@ -1,5 +1,5 @@
 <div class="row justify-content-center">
-    <h1>Commandes</h1>
+    <h1>Mes commandes</h1>
     <table class="table table-striped">
         <thead>
             <tr>
