add edit invoice item

--- a/src/app/invoices/components/view-invoice/view-invoice.component.html
+++ b/src/app/invoices/components/view-invoice/view-invoice.component.html
@@ -13,7 +13,7 @@
                                 <th>Quantité</th>
                                 <th>Prix</th>
                                 <th>Total</th>
-                                <th>Status</th>
+                                <th>Statut</th>
                                 <th></th>
                             </tr>
                         </thead>
