--- a/src/app/invoice-items/components/table-invoice-items/table-invoice-items.component.html
+++ b/src/app/invoice-items/components/table-invoice-items/table-invoice-items.component.html
@@ -1,1 +1,34 @@
-<p>table-invoice-items works!</p>
+<div class="row justify-content-center">
+    <h1>Gestion des commandes</h1>
+    <table class="table table-striped">
+        <thead>
+            <tr>
+                <th scope="col">#</th>
+                <th scope="col">Description</th>
+                <th scope="col">Quantité</th>
+                <th scope="col">Statut</th>
+                <th scope="col">Date de commande</th>
+                <th scope="col" class="text-end"></th>
+            </tr>
+        </thead>
+        <tbody>
+            @for (invoiceItem of invoiceItems; track invoiceItem.id; let i = $index) {
+                <tr>
+                    <td>{{ i + 1 }}</td>
+                    <td>{{ invoiceItem.product.description }}</td>
+                    <td>{{ invoiceItem.quantity }}</td>
+                    <td>{{ getInvoiceItemStatus(invoiceItem) }}</td>
+                    <td>{{ invoiceItem.createdAt | date: 'dd/MM/yyyy' }}</td>
+                    <td  class="text-end">
+                        <button class="btn btn-outline-secondary btn-sm me-2" 
+                            [routerLink]="['/invoice-items/edit', invoiceItem.id]"
+                            title="Voir"
+                        >
+                            <i class="fas fa-edit"></i>
+                        </button>
+                    </td>
+                </tr>
+            }
+        </tbody>
+    </table>
+</div>
