--- a/src/app/invoices/components/table-invoices/table-invoices.component.html
+++ b/src/app/invoices/components/table-invoices/table-invoices.component.html
@@ -28,7 +28,7 @@
                     <td>
                         {{ invoice.paidAt | date: 'dd/MM/yyyy' }}   
                     </td>
-                    <td>
+                    <td  class="text-end">
                         <button class="btn btn-outline-secondary btn-sm me-2" 
                             [routerLink]="['/invoices/view', invoice.id]"
                             title="Voir"
