--- a/src/app/products/components/edit-product/edit-product.component.html
+++ b/src/app/products/components/edit-product/edit-product.component.html
@@ -61,6 +61,7 @@
                 
                 <div class="card-footer d-flex justify-content-between">
                     <button [routerLink]="['/products']" class="btn btn-secondary">
+                        <i class="fas fa-arrow-left"></i>
                         Retour
                     </button>
                     <button 
