--- a/src/app/invoices/components/edit-invoice/edit-invoice.component.html
+++ b/src/app/invoices/components/edit-invoice/edit-invoice.component.html
@@ -19,12 +19,12 @@
                             <tr *ngFor="let item of invoice.invoiceItems; let i = index">
                                 <td>{{ i + 1 }}</td>
                                 <td><img 
-                                    *ngIf="item.product.image" 
-                                    [src]="'data:image/jpeg;base64,' + item.product.image" 
+                                    *ngIf="item.product?.image" 
+                                    [src]="'data:image/jpeg;base64,' + item.product?.image" 
                                     class="card-img-top" 
                                     style="height: 20px; object-fit: cover;"
                                 /></td>
-                                <td> {{ item.product.description }}</td>
+                                <td> {{ item.name }}</td>
                                 <td>{{ item.quantity }}</td>
                                 <td>{{ item.unitPrice |currency:'€' }}</td>
                                 <td>{{ item.quantity * item.unitPrice |currency:'€' }}</td>
@@ -56,6 +56,7 @@
                 
                 <div class="card-footer d-flex justify-content-between">
                     <button class="btn btn-secondary">
+                        <i class="fas fa-arrow-left"></i>
                         Retour
                     </button>
                     <button 
