--- a/src/app/invoices/components/view-invoice/view-invoice.component.html
+++ b/src/app/invoices/components/view-invoice/view-invoice.component.html
@@ -19,14 +19,14 @@
                         </thead>
                         <tbody>
                             <tr *ngFor="let item of invoice.invoiceItems; let i = index">
-                                <td>{{ i + 1 }}</td>
+                                <th>{{ i + 1 }}</th>
                                 <td><img 
                                     *ngIf="item.product.image" 
                                     [src]="'data:image/jpeg;base64,' + item.product.image" 
                                     class="card-img-top" 
                                     style="height: 20px; object-fit: cover;"
                                 /></td>
-                                <td> {{ item.product.description }}</td>
+                                <td> {{ item.name }}</td>
                                 <td>{{ item.quantity }}</td>
                                 <td>{{ item.unitPrice |currency:'€' }}</td>
                                 <td>{{ item.quantity * item.unitPrice |currency:'€' }}</td>
