--- a/src/app/products/components/view-product/view-product.component.html
+++ b/src/app/products/components/view-product/view-product.component.html
@@ -3,27 +3,53 @@
         <div class="card shadow my-5">
             <h4 class="card-header">Détails de l'article</h4>
             <div class="card-body">
-                <div class="mb-3">
-                    <b><label for="name" class="form-label">Nom de l'article : </label></b>
-                    <p>{{ product.name }}</p>
-                </div>
-                <div class="mb-3">
-                    <b><label for="description" class="form-label">Description de l'article : </label></b>
-                    <p>{{ product.description }}</p>
-                </div>
-                <div class="mb-3">
-                    <b><label for="price" class="form-label">Prix de l'article : </label></b>
-                    <p>{{ product.price |currency:'€' }}</p>
-                </div>
-                
-                <div *ngIf="product.image " class="mt-3">
-                    <h6>photo :</h6>
-                    <img
-                        [src]="product.image"
-                        alt="Image de l'article"
-                        class="img-thumbnail"
-                        style="max-width: 200px;"
-                    />
+                <div class="row">
+                    <div class="col-md-6">
+                        <div class="mb-3">
+                            <b><label for="name" class="form-label">Nom de l'article : </label></b>
+                            <p>{{ product.name }}</p>
+                        </div>
+                        <div class="mb-3">
+                            <b><label for="description" class="form-label">Description de l'article : </label></b>
+                            <p>{{ product.description }}</p>
+                        </div>
+                        <div class="mb-3">
+                            <b><label for="price" class="form-label">Prix de l'article : </label></b>
+                            <p>{{ product.price |currency:'€' }}</p>
+                        </div>
+                        
+                        <div *ngIf="product.image " class="mt-3">
+                            <h6>photo :</h6>
+                            <img
+                                [src]="product.image"
+                                alt="Image de l'article"
+                                class="img-thumbnail"
+                                style="max-width: 200px;"
+                            />
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="mb-3">
+                            <h6>Évaluation :</h6>
+                            <div>
+
+      
+                            </div>
+                        </div>
+                        <div class="mb-3">
+                            <h6>Commentaires :</h6>
+                            <div *ngIf="product.ratings.length > 0; else noComments">
+                                <ul class="list-group">
+                                    <li class="list-group-item" *ngFor="let comment of product.ratings">
+                                        <strong>{{ comment.user.firstname }}:</strong> {{ comment.comment }}
+                                    </li>
+                                </ul>
+                            </div>
+                            <ng-template #noComments>
+                                <p>Aucun commentaire pour cet article.</p>
+                            </ng-template>
+                        </div>
+                    </div>
                 </div>
             </div>
             
