--- a/src/app/products/components/view-product/view-product.component.html
+++ b/src/app/products/components/view-product/view-product.component.html
@@ -1,74 +1,98 @@
 <div class="row justify-content-center">
-    <div class="col-md-9">
+    <div class="col-md-10">
         <div class="card shadow my-5">
-            <h4 class="card-header">Détails de l'article</h4>
-            <div class="card-body">
-                <div class="row">
-                    <div class="col-md-6">
-                        <div class="mb-3">
-                            <b><label for="name" class="form-label">Nom de l'article : </label></b>
-                            <p>{{ product.name }}</p>
-                        </div>
-                        <div class="mb-3">
-                            <b><label for="description" class="form-label">Description de l'article : </label></b>
-                            <p>{{ product.description }}</p>
-                        </div>
-                        <div class="mb-3">
-                            <b><label for="price" class="form-label">Prix de l'article : </label></b>
-                            <p>{{ product.price |currency:'€' }}</p>
-                        </div>
-                        
-                        <div *ngIf="product.image " class="mt-3">
-                            <h6>photo :</h6>
+            <div class="row g-0">
+                <!-- Left Column: Product Image -->
+                <div class="col-md-5">
+                    <div class="p-3">
+                        <div *ngIf="product.image" class="text-center">
                             <img
                                 [src]="product.image"
                                 alt="Image de l'article"
-                                class="img-thumbnail"
-                                style="max-width: 200px;"
+                                class="img-fluid rounded"
+                                style="max-height: 300px; object-fit: contain;"
                             />
                         </div>
+                        <div *ngIf="!product.image" class="text-center">
+                            <p class="text-muted">Aucune image disponible</p>
+                        </div>
                     </div>
-                    <div class="col-md-6">
+                </div>
+
+                <!-- Right Column: Product Details -->
+                <div class="col-md-7">
+                    <div class="card-body">
+                        <h3 class="card-title">{{ product.name }}</h3>
+                        <p class="text-muted">{{ "category" }}</p>
+                        <p class="card-text">
+                            <b>Description :</b> {{ product.description }}
+                        </p>
+                        <h4 class="text-primary">{{ product.price | currency: 'EUR' }}</h4>
+
+                        <!-- Ratings -->
                         <div class="mb-3">
                             <h6>Évaluation :</h6>
                             <div>
-
-      
+                                <i
+                                    class="fas fa-star text-warning"
+                                    *ngFor="let star of getStars(rating); let i = index"
+                                ></i>
                             </div>
                         </div>
-                        <div class="mb-3">
-                            <h6>Commentaires :</h6>
-                            <div *ngIf="product.ratings.length > 0; else noComments">
-                                <ul class="list-group">
-                                    <li class="list-group-item" *ngFor="let comment of product.ratings">
-                                        <strong>{{ comment.user.firstname }}:</strong> {{ comment.comment }}
-                                    </li>
-                                </ul>
-                            </div>
-                            <ng-template #noComments>
-                                <p>Aucun commentaire pour cet article.</p>
-                            </ng-template>
+
+                        <!-- Add to Cart Button -->
+                        <div class="mt-4">
+                            <button
+                                type="button"
+                                class="btn btn-primary btn-lg w-100"
+                                (click)="addToInvoice(product.id)"
+                                *ngIf="showAddToInvoiceButton()"
+                            >
+                                <i class="fas fa-shopping-cart"></i> Ajouter au panier
+                            </button>
                         </div>
                     </div>
                 </div>
             </div>
-            
-            
-            <div class="card-footer d-flex justify-content-between">
-                <button [routerLink]="['/products']" class="btn btn-secondary">
-                    <i class="fas fa-arrow-left"></i>   
-                    Retour
-                </button>
-                <button 
-                    type="submit" 
-                    class="btn btn-primary"
-                    (click)="addToInvoice(product.id)"
-                    *ngIf="showAddToInvoiceButton()"
-                >
-                    <i class="fas fa-shopping-cart"></i>
-                    Ajouter au panier
-                </button>
+        </div>
+
+        <!-- Comments Section -->
+        <div class="card shadow my-4">
+            <div class="card-header bg-default">
+                <h5 class="mb-0">Avis des clients</h5>
             </div>
+            <div class="card-body">
+                <div *ngIf="product.ratings.length > 0; else noComments">
+                    <div class="mb-3" *ngFor="let comment of product.ratings">
+                        <div class="d-flex align-items-start">
+                            <div class="me-3">
+                                <i class="fas fa-user-circle fa-2x text-secondary"></i>
+                            </div>
+                            <div>
+                                <h6 class="mb-1">{{ comment.user.firstname }}</h6>
+                                <div class="text-warning mb-1">
+                                    <i
+                                        class="fas fa-star"
+                                        *ngFor="let star of getStars(comment.rate)"
+                                    ></i>
+                                </div>
+                                <p class="mb-0 text-muted">{{ comment.comment }}</p>
+                                <small class="text-muted">{{ comment.createdAt | date: 'dd/MM/yyyy' }}</small>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <ng-template #noComments>
+                    <p class="text-muted text-center">Aucun avis pour cet article.</p>
+                </ng-template>
+            </div>
+        </div>
+
+        <!-- Back Button -->
+        <div class="text-center mt-3">
+            <button [routerLink]="['/products']" class="btn btn-secondary">
+                <i class="fas fa-arrow-left"></i> Retour
+            </button>
         </div>
     </div>
 </div>
