--- a/src/app/invoices/components/table-invoices/table-invoices.component.html
+++ b/src/app/invoices/components/table-invoices/table-invoices.component.html
@@ -1,43 +1,51 @@
 <div class="row justify-content-center">
-    <h1>Mes commandes</h1>
-    <table class="table table-striped">
-        <thead>
-            <tr>
-                <th scope="col">#</th>
-                <th scope="col">Prix</th>
-                <th scope="col">Statut</th>
-                <th scope="col">Date de création</th>
-                <th scope="col">Date de paiement</th>
-                <th scope="col" class="text-end"></th>
-           
-            </tr>
-        </thead>
-        <tbody>
-            @for (invoice of invoices; track invoice.id; let i = $index) {
-                <tr>
-                    <th scope="row">{{ i + 1 }}</th>
-                    <td>
-                        {{ getPrice(invoice) | currency: 'EUR' }}
-                    </td>
-                    <td>
-                        {{ getInvoiceStatus(invoice) }}
-                    </td>
-                    <td>
-                        {{ invoice.createdAt | date: 'dd/MM/yyyy' }}
-                    </td>
-                    <td>
-                        {{ invoice.paidAt | date: 'dd/MM/yyyy' }}   
-                    </td>
-                    <td  class="text-end">
-                        <button class="btn btn-outline-secondary btn-sm me-2" 
-                            [routerLink]="['/invoices/view', invoice.id]"
-                            title="Voir"
-                        >
-                            <i class="fas fa-eye"></i>
-                        </button>
-                    </td>
-                </tr>
-            }
-        </tbody>
-    </table>
+    <div class="col-md-10">
+        <div class="card shadow-lg rounded-3 my-5">
+            <div class="card-header bg-default">
+                <h1 class="mb-0">Mes commandes</h1>
+            </div>
+            <div class="card-body">
+                <table class="table table-striped">
+                    <thead>
+                        <tr>
+                            <th scope="col">#</th>
+                            <th scope="col">Prix</th>
+                            <th scope="col">Statut</th>
+                            <th scope="col">Date de commande</th>
+                            <th scope="col">Date de paiement</th>
+                            <th scope="col" class="text-end"></th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        @for (invoice of invoices; track invoice.id; let i = $index) {
+                            <tr>
+                                <th scope="row">{{ i + 1 }}</th>
+                                <td>
+                                    {{ getPrice(invoice) | currency: 'EUR' }}
+                                </td>
+                                <td>
+                                    {{ getInvoiceStatus(invoice) }}
+                                </td>
+                                <td>
+                                    {{ invoice.createdAt | date: 'dd/MM/yyyy' }}
+                                </td>
+                                <td>
+                                    {{ invoice.paidAt | date: 'dd/MM/yyyy' }}
+                                </td>
+                                <td class="text-end">
+                                    <button
+                                        class="btn btn-outline-secondary btn-sm me-2"
+                                        [routerLink]="['/invoices/view', invoice.id]"
+                                        title="Voir"
+                                    >
+                                        <i class="fas fa-eye"></i>
+                                    </button>
+                                </td>
+                            </tr>
+                        }
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
 </div>
