--- a/src/app/products/components/rate-product/rate-product.component.html
+++ b/src/app/products/components/rate-product/rate-product.component.html
@@ -1,5 +1,5 @@
 <div class="row justify-content-center">
-    <div class="col-md-9">
+    <div class="col-md-10">
         <div class="card shadow my-5">
             <form [formGroup]="productRateForm"  (ngSubmit)="saveRatingProduct()">
                 <h4 class="card-header">Evaluer l'article</h4>
@@ -9,7 +9,7 @@
                         <p>{{ product.name }}</p>
                     </div>
                     <div class="mb-3">
-                        <b><label for="description" class="form-label">Qu'avez-vous pensez de l'article ?</label></b>
+                        <b><label for="description" class="form-label">Qu'avez-vous pensé de l'article ?</label></b>
                         <textarea
                         formControlName="comment"
                         type="textArea"
