--- a/src/app/shared/components/navbar-private/navbar-private.component.html
+++ b/src/app/shared/components/navbar-private/navbar-private.component.html
@@ -6,8 +6,11 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
+        <li *ngIf="showShop()" class="nav-item">
+          <a class="nav-link" href="/shop">Magasin</a>
+        </li>
         <li *ngIf="showProducts()" class="nav-item">
-          <a class="nav-link" href="/products">Articles en vente</a>
+          <a class="nav-link" href="/products">Mes articles</a>
         </li>
         <li *ngIf="showUsers()" class="nav-item"> 
           <a class="nav-link" href="/users">Utilisateurs</a>
