--- a/src/app/products/components/edit-product/edit-product.component.html
+++ b/src/app/products/components/edit-product/edit-product.component.html
@@ -48,7 +48,45 @@
                             (change)="onFileSelected($event)"
                         />
                     </div>
+                    <div class="mb-3">
+                        <b><label for="category_select" class="form-label">Catégorie de l'article :</label></b>
+                        <div class="row">
+                            <div class="col-md-6">
+                                <label for="category" class="form-label">Catégorie existante :</label>
+                                <select
+                                    [(ngModel)]="product.category"
+                                    id="category"
+                                    class="form-select"
+                                    name="category"
+                                >
+                                    <option *ngFor="let category of categories" [value]="category.id">
+                                        {{ category.name }}
+                                    </option>
+                                </select>
+                            </div>
                     
+                            <div class="col-md-6">
+                                <label for="newCategory" class="form-label">Ajouter une nouvelle catégorie :</label>
+                                <div class="input-group">
+                                    <input
+                                        [(ngModel)]="newCategoryName"
+                                        type="text"
+                                        id="newCategory"
+                                        class="form-control"
+                                        placeholder="Nom de la nouvelle catégorie"
+                                        name="newCategory"
+                                    />
+                                    <button
+                                        type="button"
+                                        class="btn btn-outline-primary"
+                                        (click)="addNewCategory()"
+                                    >
+                                        Ajouter
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                     <div *ngIf="product.image " class="mt-3">
                         <b><p>photo :</p></b>
                         <img
