--- a/src/app/invoice-items/components/table-invoice-items/table-invoice-items.component.html
+++ b/src/app/invoice-items/components/table-invoice-items/table-invoice-items.component.html
@@ -1,34 +1,42 @@
 <div class="row justify-content-center">
-    <h1>Gestion des commandes</h1>
-    <table class="table table-striped">
-        <thead>
-            <tr>
-                <th scope="col">#</th>
-                <th scope="col">Description</th>
-                <th scope="col">Quantité</th>
-                <th scope="col">Statut</th>
-                <th scope="col">Date de commande</th>
-                <th scope="col" class="text-end"></th>
-            </tr>
-        </thead>
-        <tbody>
-            @for (invoiceItem of invoiceItems; track invoiceItem.id; let i = $index) {
-                <tr>
-                    <th>{{ i + 1 }}</th>
-                    <td>{{ invoiceItem.name }}</td>
-                    <td>{{ invoiceItem.quantity }}</td>
-                    <td>{{ getInvoiceItemStatus(invoiceItem) }}</td>
-                    <td>{{ invoiceItem.createdAt | date: 'dd/MM/yyyy' }}</td>
-                    <td  class="text-end">
-                        <button class="btn btn-outline-secondary btn-sm me-2" 
-                            [routerLink]="['/invoice-items/edit', invoiceItem.id]"
-                            title="Voir"
-                        >
-                            <i class="fas fa-edit"></i>
-                        </button>
-                    </td>
-                </tr>
-            }
-        </tbody>
-    </table>
+    <div class="col-md-10">
+        <div class="card shadow-lg rounded-3 my-5">
+            <div class="card-header bg-default">
+                <h1 class="mb-0">Gestion des commandes</h1>
+            </div>
+            <div class="card-body">
+                <table class="table table-striped">
+                    <thead>
+                        <tr>
+                            <th scope="col">#</th>
+                            <th scope="col">Description</th>
+                            <th scope="col">Quantité</th>
+                            <th scope="col">Statut</th>
+                            <th scope="col">Date de commande</th>
+                            <th scope="col" class="text-end"></th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        @for (invoiceItem of invoiceItems; track invoiceItem.id; let i = $index) {
+                            <tr>
+                                <th>{{ i + 1 }}</th>
+                                <td>{{ invoiceItem.name }}</td>
+                                <td>{{ invoiceItem.quantity }}</td>
+                                <td>{{ getInvoiceItemStatus(invoiceItem) }}</td>
+                                <td>{{ invoiceItem.createdAt | date: 'dd/MM/yyyy' }}</td>
+                                <td  class="text-end">
+                                    <button class="btn btn-outline-secondary btn-sm me-2" 
+                                        [routerLink]="['/invoice-items/edit', invoiceItem.id]"
+                                        title="Voir"
+                                    >
+                                        <i class="fas fa-edit"></i>
+                                    </button>
+                                </td>
+                            </tr>
+                        }
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
 </div>
