--- a/src/app/products/components/table-products/table-products.component.html
+++ b/src/app/products/components/table-products/table-products.component.html
@@ -1,8 +1,15 @@
 <div class="row justify-content-center">
     <div class="col-md-10">
         <div class="card shadow-lg rounded-3 my-5">
-            <div class="card-header bg-default">
+            <div class="card-header bg-default d-flex justify-content-between align-items-center">
                 <h1 class="mb-0">Mes articles</h1>
+                <button
+                    class="btn btn-primary"
+                    [routerLink]="['/products/edit']"
+                    title="Ajouter un article"
+                >
+                    <i class="fas fa-plus"></i> Ajouter
+                </button>
             </div>
             <div class="card-body">
                 <table class="table table-striped">
@@ -25,7 +32,9 @@
                                 <td>
                                     {{ product.price }} €
                                 </td>
-                                <td></td>
+                                <td>
+                                    {{ product.category }}
+                                </td>
                                 <td class="text-end">
                                     <button
                                         class="btn btn-outline-secondary btn-sm me-2"
